hphp/test/slow/packages/requirepackage/parse_errors/parse_errors1.php.inc
<?hh

<<__RequirePackage()>>
function ape() : void {}
